--- a/_posts/2013-05-04-piano.md
+++ b/_posts/2013-05-04-piano.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: "programming of pinao"
-description: "these are some code for program pinao,just have some funny."
+title: "programming of piano"
+description: "these are some code for program piano,just have some funny."
 tags: [sample post, funny]
 modified: 2013-05-4
 image:
