--- a/_posts/2018-06-01-idea-svn.md
+++ b/_posts/2018-06-01-idea-svn.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Intellij IDEA SVN"
-description: “关于idea svn使用总结”
+description: "关于idea svn使用总结"
 tags: [sample post, document]
 modified: 2018-06-01
 image:
@@ -25,17 +25,17 @@ share: true
 
 ![GitHub set up](https://raw.githubusercontent.com/Lucces/blog/gh-pages/images/2.jpg)
 
-* 上图标识1：选择使用` subversion(svn) `对项目进行版本控制
+* 上图标识1：选择使用 ` subversion(svn) ` 对项目进行版本控制
 
 ![GitHub set up](https://raw.githubusercontent.com/Lucces/blog/gh-pages/images/3.jpg)
 
-* 上图标识1：开启svn版本控制后 标识1处的` subversioin `显示在右键菜单中
+* 上图标识1：开启svn版本控制后 标识1处的 ` subversioin ` 显示在右键菜单中
 * 上图标识2：将本地新建项目对应到svn服务器具体目录下
 
 ![GitHub set up](https://raw.githubusercontent.com/Lucces/blog/gh-pages/images/4.jpg)
 
 * 上图标识1：选择具体的文件夹，可以使用svn插件内置功能直接生成svn的项目结构（trunk，branch，tag）
-* 上图标识2：点击` share `，svn可以生成一个项目对应的svn的项目结构，但并包含本地项目代码
+* 上图标识2：点击 ` share ` ，svn可以生成一个项目对应的svn的项目结构，但并包含本地项目代码
 
 ### 提交代码
 
